--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,9 @@
 Options -Indexes
 
 RewriteEngine on
-RewriteRule ^([a-zA-Z0-9-_\/]*)$ index.php
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.*)$ GC.php
 
-ErrorDocument 404 /404.php
+ErrorDocument 404 GC.php
 
 php_flag display_errors on
